--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -284,33 +284,35 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .marquee {
-  width: 100%;
-  margin: 0 auto;
-  overflow: hidden;
-  box-sizing: border-box;
-  span {
-    display: inline-block;
-    width: max-content;
-    background-color: aliceblue;
-    font-weight: 700;
-    padding-left: 100%;
-    /* show the marquee just outside the paragraph */
-    will-change: transform;
-    animation: marquee 30s linear infinite;
-    @include rwd('tiny') {
-    animation: marquee2 20s linear infinite;
-    }
-    @include rwd('ssm') {
+  p {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    box-sizing: border-box;
+    div {
+      display: inline-block;
+      width: max-content;
+      background-color: aliceblue;
+      font-weight: 700;
+      padding-left: 100%;
+      /* show the marquee just outside the paragraph */
+      will-change: transform;
+      animation: marquee 30s linear infinite;
+      @include rwd('tiny') {
       animation: marquee2 20s linear infinite;
-    }
-    @include rwd('sm') {
-      animation: marquee2 20s linear infinite;
-    }
-    @include rwd('md') {
-      animation: marquee3 23s linear infinite;
-    }
-    &:hover {
-      animation-play-state: paused
+      }
+      @include rwd('ssm') {
+        animation: marquee2 20s linear infinite;
+      }
+      @include rwd('sm') {
+        animation: marquee2 20s linear infinite;
+      }
+      @include rwd('md') {
+        animation: marquee3 23s linear infinite;
+      }
+      &:hover {
+        animation-play-state: paused
+      }
     }
   }
 }
